# chengdu-sumo-benchmark-config

./: .gitattributes  .gitignore  MANIFEST.md  README.md  README_DeepSignal_20260519_HF.md  README_DeepSignal_20260519_HF_zh.md  chengdu_benchmark_goal.md  lmstudio_deepsignal_20260519_chat_template.jinja  pyproject.toml  requirements.yaml  run_gpt_oss_20b_2tl_unbalanced_x1p5_full.sh  run_gpt_oss_20b_2tl_unbalanced_x1p5_solution_full.sh  watch_gpt_oss_20b_solution.sh
chengdu/: chengdu.sumocfg
scripts/: audit_qwen3_4b_control_j54.py  check_hf_model_access.py  check_repo_quality.sh  deepsignal_cycleplan_benchmark_chengdu.py  deepsignal_cycleplan_benchmark_chengdu_metrics.py  download_qwen3_4b_base_remote.sh  env_defaults.sh  filter_chengdu_tls_probe_results.py  qwen4b_parallel_watch_20260701.sh  rank_chengdu_tls_benchmark_candidates.py  recompute_target_peak_fairness_metrics.py  run_chengdu_20260519_all_tls_benchmark.sh  run_chengdu_3tl_att_awt_relaxed_x1p8_matrix.sh  run_chengdu_3tl_att_awt_x1p8_matrix_20260618.sh  run_chengdu_3tl_peak_matrix.sh  run_chengdu_3tl_peak_sidecar_4b.sh  run_chengdu_backfill_aligned_matrix_20260626.sh  run_chengdu_backfill_queue_20260626.sh  run_chengdu_base_json_matrix_parallel.sh  run_chengdu_fixed15_model_fp16_20260519.sh  run_chengdu_fixed15_qwen3_4b_base.sh  run_chengdu_gptoss20b_backfill_matrix_20260627.sh  run_chengdu_j54_reasoning_nextcycle_smoke.sh  run_chengdu_phi4_repaired_directional_matrix.sh  run_chengdu_phi4_strict_matrix.sh  run_chengdu_qwen36_loaderfix_queue_20260626.sh  run_chengdu_qwen36_wait_queue_20260626.sh  (+24 more)
(+57 files in other folders)
