[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sumo-benchmark"
version = "0.1.0"
description = "Chengdu SUMO traffic-signal benchmark runners and tools"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sumo_benchmark = ["shell/*.sh"]

